// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check the Cart class operations checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas runnign shoes - men",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas runnign shoes - women",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`check the Cart class operations summary() should return the cart array with the added item 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas runnign shoes - men",
      },
      "quantity": 2,
    },
  ],
  "total": 70776,
}
`;
